--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <div class="action transfer">
                 <h2 class="actions-title">Transfer money</h2>
                 <form class="action-form">
-                    <input type="text" class="action-inputs" />
-                    <input type="number" class="action-inputs" />
-                    <button class="btn btn-actions">&rarr;</button>
+                    <input type="text" class="action-inputs transfer-input-name" />
+                    <input type="number" class="action-inputs transfer-input-amount" />
+                    <button class="btn btn-actions btn-transfer">&rarr;</button>
                     <p class="action-label">Transfer to</p>
                     <p class="action-label">Amount</p>
                 </form>
@@ -58,17 +58,17 @@
             <div class="action loan">
                 <h2 class="actions-title">Request loan</h2>
                 <form class="action-form loan-form">
-                    <input type="number" class="action-inputs" />
-                    <button class="btn btn-actions">&rarr;</button>
+                    <input type="number" class="action-inputs loan-input" />
+                    <button class="btn btn-actions btn-loan">&rarr;</button>
                     <p class="action-label loan-label">Amount</p>
                 </form>
             </div>
             <div class="action close-account">
                 <h2 class="actions-title">Close account</h2>
                 <form class="action-form">
-                    <input type="text" class="action-inputs" />
-                    <input type="text" class="action-inputs" />
-                    <button class="btn btn-actions">&rarr;</button>
+                    <input type="text" class="action-inputs close-input-username" />
+                    <input type="text" class="action-inputs close-input-pin" />
+                    <button class="btn btn-actions btn-close">&rarr;</button>
                     <p class="action-label">Confirm user</p>
                     <p class="action-label">Comfirm PIN</p>
                 </form>
